deploy: d9bcfcecc4cde645c88740dbf3f6074509bd7dc9

--- a/index.html
+++ b/index.html
@@ -890,11 +890,11 @@ Development of the specification is under the umbrella of the Linux Foundation. 
       <span class="pi">-</span> <span class="s">High Quality Pets data</span>
       <span class="pi">-</span> <span class="s">MC access</span>
       <span class="pi">-</span> <span class="s">Billed instantly</span> 
-    <span class="na">interface</span><span class="pi">:</span>  
+    <span class="na">interface</span><span class="pi">:</span> <span class="s">MCP</span> 
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/Interafaces/Agent/"</span>
-    <span class="na">SLA</span><span class="pi">:</span>  
+    <span class="na">SLA</span><span class="pi">:</span> <span class="s">Extended</span> 
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/SLAs/Extended"</span>  
-    <span class="na">dataQuality</span><span class="pi">:</span>  
+    <span class="na">dataQuality</span><span class="pi">:</span> <span class="s">Basic</span> 
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/DQs/Basic"</span>
 
   <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">Premium subscription 1 month</span>
@@ -907,11 +907,11 @@ Development of the specification is under the umbrella of the Linux Foundation. 
       <span class="pi">-</span> <span class="s">High Quality Pets data</span>
       <span class="pi">-</span> <span class="s">High amount of transactions</span>
       <span class="pi">-</span> <span class="s">Billed monthly</span> 
-    <span class="na">interface</span><span class="pi">:</span>  
+    <span class="na">interface</span><span class="pi">:</span> <span class="s">API</span>
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/Interafaces/API"</span>
-    <span class="na">SLA</span><span class="pi">:</span>  
+    <span class="na">SLA</span><span class="pi">:</span> <span class="s">Basic</span> 
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/SLAs/Basic"</span>  
-    <span class="na">dataQuality</span><span class="pi">:</span>  
+    <span class="na">dataQuality</span><span class="pi">:</span> <span class="s">Basic</span> 
       <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/Components/DQs/Basic"</span>
 
 </code></pre></div>
