deploy: 098f2b7389a9442ba31e3bf28046547dbf140d96

--- a/index.html
+++ b/index.html
@@ -1148,17 +1148,12 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
     <span class="na">DataQualities</span><span class="pi">:</span>
         <span class="na">Basic</span><span class="pi">:</span>
-        <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">uptime</span>
-            <span class="s">displaytitle</span><span class="pi">:</span>
-            <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Uptime</span>
-            <span class="na">objective</span><span class="pi">:</span> <span class="m">90</span>
-            <span class="na">unit</span><span class="pi">:</span> <span class="s">percent</span>
-        <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">responseTime</span>
-            <span class="s">objective</span><span class="pi">:</span> <span class="m">500</span>
-            <span class="na">unit</span><span class="pi">:</span> <span class="s">milliseconds</span>
-        <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">updateFrequency</span>
-            <span class="s">objective</span><span class="pi">:</span> <span class="m">1</span>
-            <span class="na">unit</span><span class="pi">:</span> <span class="s">days</span>
+        <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">accuracy</span>
+            <span class="s">objective</span><span class="pi">:</span> <span class="m">98</span>
+            <span class="na">unit</span><span class="pi">:</span> <span class="s">percentage</span>
+        <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">completeness</span>
+            <span class="s">objective</span><span class="pi">:</span> <span class="m">90</span>
+            <span class="na">unit</span><span class="pi">:</span> <span class="s">percentage</span>
 
 
 
