--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <a href="#components" class="toc-h1 toc-link" data-title="Components">Components</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#optional-attributes-and-elements" class="toc-h2 toc-link" data-title="Optional attributes and elements">Optional attributes and elements</a>
+                    <a href="#standard-components" class="toc-h2 toc-link" data-title="Standard Components">Standard Components</a>
                   </li>
               </ul>
           </li>
@@ -1490,7 +1490,16 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p>More over, the pricing might have Freemium and Premium plans as tiers. Then the SLA levels and/or Data Quality might differ. DAta Product provider wants to set different SLAs to both tiers. But in this case they want to set the sam Data Quality (reuse setting).</p>
 
 <p>On the right is components needed to fulfill the above need and use case. </p>
-<h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
+<h2 id='standard-components'>Standard Components</h2>
+<p>ODPS contains Standardized Components to use. Those cover most likely 80 percent of the use cases, but if not you can extend it with <em>x-</em> logic as usual. </p>
+
+<ul>
+<li>SLAs</li>
+<li>Data Quality</li>
+<li>Interfaces</li>
+<li>PaymentGateways</li>
+</ul>
+
 <blockquote>
 <p>Example of License Object usage:</p>
 </blockquote>
@@ -1562,7 +1571,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 
 
-</code></pre></div>
+</code></pre></div><h3 id='slas'>SLAs</h3>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
@@ -1572,130 +1581,58 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 </tr>
 </thead><tbody>
 <tr>
-<td><strong>license</strong></td>
-<td>element</td>
-<td>-</td>
-<td>Binds the licensing related elements and attributes together.</td>
+<td><strong>object</strong></td>
+<td>type</td>
+<td>Options</td>
+<td>Desc</td>
 </tr>
+</tbody></table>
+<h3 id='data-quality'>Data Quality</h3>
+<table><thead>
 <tr>
-<td><strong>en</strong></td>
-<td>attribute</td>
-<td><a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> defined 2-letter codes</td>
-<td>This element binds together other product attributes and expresses the langugage used. In the example this is &quot;en&quot;, which indicates that product details are in English. If you would like to use Arabic details, then name the element &quot;ar&quot;. The naming of this element follows options (language codes) listed in <a href="https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">ISO 639-1</a> standard. <br/><br/> You can have product details in multiple languages simply by adding similar sets like the example - just change the binding element name to matching language code. <br/><br/> The pattern to implement multilanguage support for data products was adopted from de facto UI translation practices. The attributes inside this element are commonly rendered in the UI for the consumer and providing a simple way to implement that was the driving reasoning. See for example  <a href="https://simplelocalize.io/docs/file-formats/multi-language-json/">JSON - Multi Language</a></td>
+<th><div style="width:150px">Element name</div></th>
+<th>Type</th>
+<th>Options</th>
+<th>Description</th>
 </tr>
+</thead><tbody>
 <tr>
-<td><strong>scope</strong></td>
-<td>element</td>
-<td>-</td>
-<td>Extent, range, coverage, area or space of the license.</td>
+<td><strong>object</strong></td>
+<td>type</td>
+<td>Options</td>
+<td>Desc</td>
 </tr>
+</tbody></table>
+<h3 id='interfaces'>Interfaces</h3>
+<table><thead>
 <tr>
-<td><strong>definition</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Background and purpose of the license.</td>
+<th><div style="width:150px">Element name</div></th>
+<th>Type</th>
+<th>Options</th>
+<th>Description</th>
 </tr>
+</thead><tbody>
 <tr>
-<td><strong>restrictions</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Restrictions of the license.</td>
+<td><strong>object</strong></td>
+<td>type</td>
+<td>Options</td>
+<td>Desc</td>
 </tr>
+</tbody></table>
+<h3 id='paymentgateways'>PaymentGateways</h3>
+<table><thead>
 <tr>
-<td><strong>geographicalArea</strong></td>
-<td>string</td>
-<td>ISO 3166-1 alpha-2 codes</td>
-<td>License right restricted to the geographical area.</td>
+<th><div style="width:150px">Element name</div></th>
+<th>Type</th>
+<th>Options</th>
+<th>Description</th>
 </tr>
+</thead><tbody>
 <tr>
-<td><strong>permanent</strong></td>
-<td>boolean</td>
-<td>true/false</td>
-<td>License with no expiration date.</td>
-</tr>
-<tr>
-<td><strong>exclusive</strong></td>
-<td>boolean</td>
-<td>true/false</td>
-<td>The exclusive license holder is given complete control over the use of the data product, and no other person or organization is allowed to use it during the term of the license agreement.</td>
-</tr>
-<tr>
-<td><strong>rights</strong></td>
-<td>array</td>
-<td>Options: Reproduction <i>(rights to reproduce)</i>, Display <i>(disclose data to others)</i>, Distribution <i>(right to distribute)</i>, Adaptation <i>(right for derivate work)</i>, Reselling <i>(right to resell)</i>, Transferring <i>(transferable data license)</i>, Sublicensing <i>(license grant may include a right to sublicense)</i></td>
-<td>Rights granted by the licence. The texts in brackets and <i>italic</i> are intended to describe rights.</td>
-</tr>
-<tr>
-<td><strong>termination</strong></td>
-<td>element</td>
-<td>-</td>
-<td>Licence termination and continuity related conditions.</td>
-</tr>
-<tr>
-<td><strong>noticePeriod</strong></td>
-<td>integer</td>
-<td>unit is days</td>
-<td>The notice period is a particular time that an data product provider or consumer must give before ending the contract. This time window allows both sides to make the necessary preparations, guaranteeing an unhindered transfer.</td>
-</tr>
-<tr>
-<td><strong>terminationConditions</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Cancellation conditions of the license.</td>
-</tr>
-<tr>
-<td><strong>continuityConditions</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Continuity conditions of the license.</td>
-</tr>
-<tr>
-<td><strong>governance</strong></td>
-<td>element</td>
-<td>-</td>
-<td>Governance is the approach taken to ensure that the agreed outcomes are being fulfilled.</td>
-</tr>
-<tr>
-<td><strong>ownership</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Data product licensing ownership.</td>
-</tr>
-<tr>
-<td><strong>audit</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>License auditing terms.</td>
-</tr>
-<tr>
-<td><strong>warranties</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>License warranties.</td>
-</tr>
-<tr>
-<td><strong>damages</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Damages refers to the sum of money (i.e. indemnifications) for a breach of some duty or violation of license right.</td>
-</tr>
-<tr>
-<td><strong>confidentiality</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Restrictions and requirements imposed on the Data User regarding e.g. the use and disclosure of the Data Holder&#39;s confidential information.</td>
-</tr>
-<tr>
-<td><strong>applicableLaws</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Applicable laws, i.e local acts, degrees or law.</td>
-</tr>
-<tr>
-<td><strong>forceMajeure</strong></td>
-<td>string</td>
-<td>text content, max length 512 chars</td>
-<td>Force majeure is a clause that is included in contracts to remove liability for unforeseeable and unavoidable catastrophes that interrupt the expected course of events and prevent participants from fulfilling obligations. These clauses generally cover both natural disasters and catastrophes created by humans.</td>
+<td><strong>object</strong></td>
+<td>type</td>
+<td>Options</td>
+<td>Desc</td>
 </tr>
 </tbody></table>
 
