deploy: efabe273d7f784b91ada77c312d88d7e2419b4cd

--- a/index.html
+++ b/index.html
@@ -399,6 +399,18 @@
                   <li>
                     <a href="#standard-components" class="toc-h2 toc-link" data-title="Standard Components">Standard Components</a>
                   </li>
+                  <li>
+                    <a href="#slas" class="toc-h2 toc-link" data-title="SLAs">SLAs</a>
+                  </li>
+                  <li>
+                    <a href="#data-quality" class="toc-h2 toc-link" data-title="Data Quality">Data Quality</a>
+                  </li>
+                  <li>
+                    <a href="#interfaces" class="toc-h2 toc-link" data-title="Interfaces">Interfaces</a>
+                  </li>
+                  <li>
+                    <a href="#paymentgateways" class="toc-h2 toc-link" data-title="PaymentGateways">PaymentGateways</a>
+                  </li>
               </ul>
           </li>
       </ul>
@@ -1571,7 +1583,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 
 
-</code></pre></div><h3 id='slas'>SLAs</h3>
+</code></pre></div><h2 id='slas'>SLAs</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
@@ -1587,7 +1599,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Desc</td>
 </tr>
 </tbody></table>
-<h3 id='data-quality'>Data Quality</h3>
+<h2 id='data-quality'>Data Quality</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
@@ -1603,7 +1615,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Desc</td>
 </tr>
 </tbody></table>
-<h3 id='interfaces'>Interfaces</h3>
+<h2 id='interfaces'>Interfaces</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
@@ -1619,7 +1631,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Desc</td>
 </tr>
 </tbody></table>
-<h3 id='paymentgateways'>PaymentGateways</h3>
+<h2 id='paymentgateways'>PaymentGateways</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
