--- a/index.html
+++ b/index.html
@@ -1586,33 +1586,93 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 </code></pre></div><h2 id='slas'>SLAs</h2>
 <table><thead>
 <tr>
-<th><div style="width:150px">Element name</div></th>
-<th>Type</th>
-<th>Options</th>
+<th><div style="width:150px">SLA Dimension</div></th>
 <th>Description</th>
 </tr>
 </thead><tbody>
 <tr>
-<td><strong>object</strong></td>
-<td>type</td>
-<td>Options</td>
-<td>Desc</td>
+<td><strong>latency</strong></td>
+<td>minimal amount of time before getting any response.</td>
+</tr>
+<tr>
+<td><strong>uptime</strong></td>
+<td>Uptime is a measure of system reliability, expressed as the percentage of time a machine, typically a computer, has been working and available. See more https://uptime.is/.</td>
+</tr>
+<tr>
+<td><strong>responseTime</strong></td>
+<td>amount of time to process external request.</td>
+</tr>
+<tr>
+<td><strong>errorRate</strong></td>
+<td>Maximum tolerated errors in data, percentage.</td>
+</tr>
+<tr>
+<td><strong>endOfSupport</strong></td>
+<td>The date at which your product will not have support anymore.</td>
+</tr>
+<tr>
+<td><strong>endOfLife</strong></td>
+<td>The date at which your product will not be available anymore. No support, no access.</td>
+</tr>
+<tr>
+<td><strong>updateFrequency</strong></td>
+<td>how often data is updates.</td>
+</tr>
+<tr>
+<td><strong>timeToDetect</strong></td>
+<td>How fast can you detect a problem?</td>
+</tr>
+<tr>
+<td><strong>timeToNotify</strong></td>
+<td>Once you see a problem, how much time do you need to notify your users?</td>
+</tr>
+<tr>
+<td><strong>timeToRepair</strong></td>
+<td>How long do you need to fix the issue once it is detected?</td>
+</tr>
+<tr>
+<td><strong>emailResponseTime</strong></td>
+<td>How long do you need to respond to email support requests?</td>
 </tr>
 </tbody></table>
 <h2 id='data-quality'>Data Quality</h2>
 <table><thead>
 <tr>
-<th><div style="width:150px">Element name</div></th>
-<th>Type</th>
-<th>Options</th>
+<th><div style="width:150px">Data Quality Dimension</div></th>
 <th>Description</th>
 </tr>
 </thead><tbody>
 <tr>
-<td><strong>object</strong></td>
-<td>type</td>
-<td>Options</td>
-<td>Desc</td>
+<td><strong>accuracy</strong></td>
+<td>The measurement of the veracity of data to its authoritative source</td>
+</tr>
+<tr>
+<td><strong>completeness</strong></td>
+<td>Data is required to be populated with a value (aka not null, not nullable). Completeness checks if all necessary data attributes are present in the dataset.</td>
+</tr>
+<tr>
+<td><strong>conformity</strong></td>
+<td>Data content must align with required standards, syntax (format, type, range), or permissible domain values. Conformity assesses how closely data adheres to standards, whether internal, external, or industry-wide.</td>
+</tr>
+<tr>
+<td><strong>consistency</strong></td>
+<td>Data should retain consistent content across data stores. Consistency ensures that data values, formats, and definitions in one group match those in another group.</td>
+</tr>
+<tr>
+<td><strong>coverage</strong></td>
+<td>All records are contained in a data store or data source. Coverage relates to the extent and availability of data present but absent from a dataset.</td>
+</tr>
+<tr>
+<td><strong>timeliness</strong></td>
+<td>The data must represent current conditions; the data is available and can be used when needed.</td>
+</tr>
+<tr>
+<td><strong>validity</strong></td>
+<td>Validity refers to the extent to which the data accurately and appropriately represents the real-world object or concept it is supposed to describe.</td>
+</tr>
+<tr>
+<td><strong>uniqueness</strong></td>
+<td>Uniqueness means each record and attribute should be one-of-a-kind, aiming for a single, unique data entry</td>
 </tr>
 </tbody></table>
 <h2 id='interfaces'>Interfaces</h2>
