--- a/index.html
+++ b/index.html
@@ -397,16 +397,16 @@
                     <a href="#standard-components" class="toc-h2 toc-link" data-title="Standard Components">Standard Components</a>
                   </li>
                   <li>
-                    <a href="#slas" class="toc-h2 toc-link" data-title="SLAs">SLAs</a>
+                    <a href="#slas-component" class="toc-h2 toc-link" data-title="SLAs Component">SLAs Component</a>
                   </li>
                   <li>
-                    <a href="#data-quality" class="toc-h2 toc-link" data-title="Data Quality">Data Quality</a>
+                    <a href="#data-quality-component" class="toc-h2 toc-link" data-title="Data Quality Component">Data Quality Component</a>
                   </li>
                   <li>
-                    <a href="#interfaces" class="toc-h2 toc-link" data-title="Interfaces">Interfaces</a>
+                    <a href="#interfaces-compoentnt" class="toc-h2 toc-link" data-title="Interfaces Compoentnt">Interfaces Compoentnt</a>
                   </li>
                   <li>
-                    <a href="#paymentgateways" class="toc-h2 toc-link" data-title="PaymentGateways">PaymentGateways</a>
+                    <a href="#paymentgateways-component" class="toc-h2 toc-link" data-title="PaymentGateways Component">PaymentGateways Component</a>
                   </li>
               </ul>
           </li>
@@ -1538,7 +1538,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 
 
-</code></pre></div><h2 id='slas'>SLAs</h2>
+</code></pre></div><h2 id='slas-component'>SLAs Component</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">SLA Dimension</div></th>
@@ -1590,7 +1590,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>How long do you need to respond to email support requests?</td>
 </tr>
 </tbody></table>
-<h2 id='data-quality'>Data Quality</h2>
+<h2 id='data-quality-component'>Data Quality Component</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Data Quality Dimension</div></th>
@@ -1630,7 +1630,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Uniqueness means each record and attribute should be one-of-a-kind, aiming for a single, unique data entry</td>
 </tr>
 </tbody></table>
-<h2 id='interfaces'>Interfaces</h2>
+<h2 id='interfaces-compoentnt'>Interfaces Compoentnt</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
@@ -1646,7 +1646,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Desc</td>
 </tr>
 </tbody></table>
-<h2 id='paymentgateways'>PaymentGateways</h2>
+<h2 id='paymentgateways-component'>PaymentGateways Component</h2>
 <table><thead>
 <tr>
 <th><div style="width:150px">Element name</div></th>
