--- a/index.html
+++ b/index.html
@@ -1581,15 +1581,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="pi">-</span> <span class="na">dimension</span><span class="pi">:</span> <span class="s">completeness</span>
           <span class="na">objective</span><span class="pi">:</span> <span class="m">90</span>
           <span class="na">unit</span><span class="pi">:</span> <span class="s">percentage</span>
-</code></pre></div><h3 id='reference-from-a-pricing-plan-or-spec'>Reference from a Pricing Plan or Spec</h3>
-<p><strong>By index (for strict referencing):</strong></p>
-
-<p>&#39;$ref: &quot;#/components/dataQualities/0&quot;&#39;</p>
-
-<p><strong>By name (if your tooling supports dereferencing by metadata):</strong></p>
-
-<p>&#39;dqName: Basic&#39;</p>
-
+</code></pre></div>
 <table><thead>
 <tr>
 <th><div style="width:150px">Data Quality Dimension</div></th>
@@ -1629,6 +1621,14 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Uniqueness means each record and attribute should be one-of-a-kind, aiming for a single, unique data entry</td>
 </tr>
 </tbody></table>
+<h3 id='reference-from-a-pricing-plan-or-spec'>Reference from a Pricing Plan or Spec</h3>
+<p><strong>By index (for strict referencing):</strong></p>
+
+<p>&#39;$ref: &quot;#/components/dataQualities/0&quot;&#39;</p>
+
+<p><strong>By name (if your tooling supports dereferencing by metadata):</strong></p>
+
+<p>&#39;dqName: Basic&#39;</p>
 <h2 id='interfaces-component'>Interfaces Component</h2><h3 id='benefits'>Benefits</h3>
 <ul>
 <li>Anonymous list allows index-based referencing</li>
