deploy: dbc58277ad354204e7ca5fe356ea4886692386ce

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <a href="#referenced-pricing-pattern" class="toc-h1 toc-link" data-title="Referenced Pricing Pattern">Referenced Pricing Pattern</a>
           </li>
           <li>
-            <a href="#referenced-pattern" class="toc-h1 toc-link" data-title="Referenced Pattern">Referenced Pattern</a>
+            <a href="#inline-pattern" class="toc-h1 toc-link" data-title="Inline Pattern">Inline Pattern</a>
           </li>
       </ul>
         <ul class="toc-footer">
@@ -1777,7 +1777,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
   <span class="na">paymentGateway</span><span class="pi">:</span>
     <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/components/paymentGateways/1"</span>
-</code></pre></div><h1 id='referenced-pattern'>Referenced Pattern</h1>
+</code></pre></div><h1 id='inline-pattern'>Inline Pattern</h1>
 <p>The objects are not defined inline, but instead references a reusable definition in the components section using a $ref path.</p>
 
 <blockquote>
