deploy: 5357a907f538d471e2ff42bdfd75382e11149b13

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             content="The Open Data Product Specification (Linux Foundation project) is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products."
         >
 
-    <title>Open (source) Data Product Specification Development Version | Linux Foundation</title>
+    <title>Open (source) Data Product Specification 4.0 RC Version | Linux Foundation</title>
 
 
     <style media="screen">
@@ -336,7 +336,7 @@
             <a href="#open-data-product-specification" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION">OPEN DATA PRODUCT SPECIFICATION</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#development-version" class="toc-h2 toc-link" data-title="Development Version">Development Version</a>
+                    <a href="#4-0-release-candidate-version" class="toc-h2 toc-link" data-title="4.0 Release Candidate Version">4.0 Release Candidate Version</a>
                   </li>
                   <li>
                     <a href="#introduction" class="toc-h2 toc-link" data-title="Introduction">Introduction</a>
@@ -455,18 +455,18 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='development-version'>Development Version</h2>
+        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='4-0-release-candidate-version'>4.0 Release Candidate Version</h2>
 <p>The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “NOT RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in BCP 14 [RFC2119] [RFC8174] when, and only when, they appear in all capitals, as shown here.</p>
 
 <p>The specification is shared under <a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0</a> license. 
 Development of the specification is under the umbrella of the Linux Foundation. </p>
 
-<p><strong>DEVELOPMENT VERSION</strong></p>
+<p><strong>RELEASE CANDIDATE VERSION</strong></p>
 
 <p><strong>Version source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/dev">https://github.com/Open-Data-Product-Initiative/dev</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/4rc">https://github.com/Open-Data-Product-Initiative/4rc</a></li>
 </ul>
 
 <p><strong>ODPS YAML Schema:</strong></p>
@@ -485,7 +485,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Participate:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/dev/issues">Raise an issue in Github</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/4rc/issues">Raise an issue in Github</a></li>
 </ul>
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
@@ -502,6 +502,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <li>increase the speed of designing, testing, and implementing data products. </li>
 <li>speed up tools development around data product design, development and management.</li>
 <li>enable creation of automated data product deployment with standard methods (DataOps)</li>
+<li>support flexible data product pricing with plans specific DQ, SLA, and Access (with references)</li>
 <li>enable <a href="https://www.cloudbees.com/blog/what-is-everything-as-code-eac">Everything as Code</a> approach for SLA and Data Quality monitoring</li>
 </ul>
 
@@ -511,7 +512,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <p><img src="images/ODPS-design-d19966d9.png" alt="odps-model" /></p>
 
-<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/dev/issues">raise an issue in Github</a></p>
+<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/rc4/issues">raise an issue in Github</a></p>
 <h2 id='document-structure'>Document structure</h2>
 <p><strong>LEFT COLUMN: Navigation</strong></p>
 
