deploy: e3c450cc906f79e8c191f27aad030f8e574947bd

--- a/index.html
+++ b/index.html
@@ -2125,7 +2125,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>authenticationMethod</strong></td>
 <td>string</td>
 <td>any</td>
-<td>Data access authentication method type, such as API key, HTTP Basic, OAuth, No authentication.</td>
+<td>Data access authentication method type: API key, HTTP Basic, OAuth, No authentication.</td>
 </tr>
 <tr>
 <td><strong>specification</strong></td>
@@ -2137,7 +2137,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>format</strong></td>
 <td>string</td>
 <td>any</td>
-<td>Data access file format type, such as JSON, XML, GraphQL, plain text.</td>
+<td>Data access file format type: JSON, XML, GraphQL, plain text, zip, CSV, Excel.</td>
 </tr>
 <tr>
 <td><strong>specsURL</strong></td>
