deploy: 33ea39570bf9514052847a606efa04df0c0786df

--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>interface</strong></td>
 <td>element</td>
 <td>-</td>
-<td>Reference to the ability to use data.</td>
+<td>Reference to the ability to use data. Use simple name, it will be references from other objects like Pricing</td>
 </tr>
 <tr>
 <td><strong>outputPorttype</strong></td>
