deploy: 7b5a80364f199fe03299160eda649b67279f3e95

--- a/index.html
+++ b/index.html
@@ -2076,12 +2076,21 @@ Development of the specification is under the umbrella of the Linux Foundation. 
   <span class="pi">-</span> <span class="na">interface</span><span class="pi">:</span> <span class="s">API</span>
     <span class="na">authenticationMethod</span><span class="pi">:</span> <span class="s">OAuth</span>
     <span class="na">specification</span><span class="pi">:</span> <span class="s">OAS</span>
+    <span class="na">format</span><span class="pi">:</span> <span class="s">JSON</span>
     <span class="na">accessURL</span><span class="pi">:</span> <span class="pi">&gt;-</span>
       <span class="s">https://data.cms.gov/data-api/v1/dataset/2/data</span>
     <span class="na">specsURL</span><span class="pi">:</span> <span class="pi">&gt;-</span>
       <span class="s">https://data.cms.gov/provr-enrollment/api-docs</span>
     <span class="na">documentationURL</span><span class="pi">:</span> <span class="pi">&gt;-</span> 
       <span class="s">https://data.cms.gov/provr-enrollment/docs</span>
+  <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">Agent</span> 
+      <span class="s">description</span><span class="pi">:</span> 
+      <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">MCP interface for structured data access and agent interaction.</span>
+      <span class="na">authenticationMethod</span><span class="pi">:</span> <span class="s">Token</span>
+      <span class="na">specification</span><span class="pi">:</span> <span class="s">MCP 2025-03-26</span>
+      <span class="na">format</span><span class="pi">:</span> <span class="s">MCP</span>
+      <span class="na">specsURL</span><span class="pi">:</span> <span class="s">https://urbanpulse.ai/llms.txt</span>
+      <span class="na">documentationURL</span><span class="pi">:</span> <span class="s">https://urbanpulse.ai/llms-full.txt</span>
 </code></pre></div>
 <table><thead>
 <tr>
