deploy: 1e979c87cfcacd297c2f382a48f71f0fdaeeb9ef

--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="pi">-</span> <span class="s">High Quality Pets data</span>
         <span class="pi">-</span> <span class="s">High amount of transactions</span>
         <span class="pi">-</span> <span class="s">Billed monthly</span> 
+      <span class="na">paymentGateway</span><span class="pi">:</span>
+        <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/components/paymentGateways/api"</span>
   <span class="na">executable</span><span class="pi">:</span>
       <span class="na">type</span><span class="pi">:</span> <span class="s">Stripe</span> 
       <span class="na">version</span><span class="pi">:</span> <span class="m">1.2</span>
