--- a/index.html
+++ b/index.html
@@ -1547,7 +1547,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="pi">-</span> <span class="s">High amount of transactions</span>
         <span class="pi">-</span> <span class="s">Billed monthly</span> 
       <span class="na">paymentGateway</span><span class="pi">:</span>
-        <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/components/paymentGateways/api"</span>
+        <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/paymentGateways/api"</span>
   <span class="na">executable</span><span class="pi">:</span>
       <span class="na">type</span><span class="pi">:</span> <span class="s">Stripe</span> 
       <span class="na">version</span><span class="pi">:</span> <span class="m">1.2</span>
