deploy: c333efefa51b79e32fef12ecadde929f552b00c3

--- a/index.html
+++ b/index.html
@@ -2141,7 +2141,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Binds the data access related elements and attributes together.</td>
 </tr>
 <tr>
-<td><strong>interface</strong></td>
+<td><strong>id</strong></td>
 <td>element</td>
 <td>-</td>
 <td>Reference to the ability to use data. Use simple name, it will be references from other objects like Pricing</td>
