deploy: f6350fb0c7d0d760e85d93e8e4171b24d26dd788

--- a/index.html
+++ b/index.html
@@ -546,6 +546,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
       <span class="pi">-</span> <span class="na">en</span><span class="pi">:</span> <span class="s">Data Accuracy (percent)</span>
 </code></pre></div><h1 id='document-level-attributes'>Document level attributes</h1>
 <p>Here&#39;s the list of attributes which can occur at the document root level. In the following description, if a field is not explicitly <strong>REQUIRED</strong> or described with a MUST or SHALL, it can be considered OPTIONAL. Optional attributes are listed in own table and examples are given on the right column. </p>
+
+<p>It is RECOMMENDED that the root OpenAPI document be named: dataproduct.json or dataproduct.yaml.</p>
 <h2 id='mandatory-attributes'>Mandatory attributes</h2>
 <blockquote>
 <p>Example of document level attribute usage and structure:</p>
