deploy: cc5e546bbe43b6603aa0ce86fbde6c4e28a62fe1

--- a/index.html
+++ b/index.html
@@ -1578,6 +1578,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
         <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/paymentGateways/default"</span>
       <span class="na">dataQuality</span><span class="pi">:</span>
         <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/dataQuality/premium"</span>
+      <span class="na">SLA</span><span class="pi">:</span>
+        <span class="s">$ref</span><span class="pi">:</span> <span class="s2">"</span><span class="s">#/SLA/premium"</span>
   <span class="na">executable</span><span class="pi">:</span>
       <span class="na">type</span><span class="pi">:</span> <span class="s">Stripe</span> 
       <span class="na">version</span><span class="pi">:</span> <span class="m">1.2</span>
